force-app/main/default/objects/Contact/fields/Apellidos__c.field-meta.xml
<CustomField>
    <fullName>Apellidos__c</fullName>
    <label>Apellidos</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>