force-app/main/default/objects/Contact/fields/Direccion__c.field-meta.xml
<CustomField>
    <fullName>Direccion__c</fullName>
    <description>Dirección del contacto</description>
    <label>Dirección</label>
    <length>100</length>
    <type>Text</type>
</CustomField>