force-app/main/default/objects/Contact/fields/Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Loan_Amount__c</fullName>
    <description>Many homebuyers who work with DreamHouse Realty are prequalified for a home loan. Brokers need to know how much money their clients can borrow so they can show properties in the right price range</description>
    <label>Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>