force-app/main/default/objects/Contact/fields/Metodo_contacto__c.field-meta.xml
<CustomField>
    <fullName>Metodo_contacto__c</fullName>
    <description>Método de contacto del contacto</description>
    <label>Método de contacto</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Teléfono</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>