force-app/main/default/objects/Contact/fields/NIF__c.field-meta.xml
<CustomField>
    <fullName>NIF__c</fullName>
    <description>DNI/Identificador del contacto</description>
    <label>NIF</label>
    <length>9</length>
    <required>true</required>
    <type>Text</type>
</CustomField>