force-app/main/default/objects/Contact/fields/Nombre__c.field-meta.xml
<CustomField>
    <fullName>Nombre__c</fullName>
    <description>Nombre del contacto</description>
    <label>Nombre</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>