force-app/main/default/objects/Contact/fields/Prequalified__c.field-meta.xml
<CustomField>
    <fullName>Prequalified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>With this field we can know if the contact is prequalified or not</description>
    <label>¿Precualificado?</label>
    <type>Checkbox</type>
</CustomField>