force-app/main/default/objects/Contact/fields/Rol__c.field-meta.xml
<CustomField>
    <fullName>Rol__c</fullName>
    <label>Rol</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Titular del contrato</fullName>
            </value>
            <value>
                <fullName>Autorizado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>