force-app/main/default/objects/Contact/fields/Telefono__c.field-meta.xml
<CustomField>
    <fullName>Telefono__c</fullName>
    <description>Teléfono de contacto</description>
    <label>Teléfono</label>
    <length>9</length>
    <type>Text</type>
</CustomField>