force-app/main/default/objects/Contact/validationRules/ApellidosAgente.validationRule-meta.xml
<ValidationRule>
    <fullName>ApellidosAgente</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISCHANGED (Apellidos__c), $Profile.Id=&apos;00e09000000G6f5AAC&apos;)</errorConditionFormula>
    <errorMessage>No tienes permisos para cambiar el campo Apellidos</errorMessage>
</ValidationRule>