force-app/main/default/objects/Contact/validationRules/ApellidosAgenteReclamaciones.validationRule-meta.xml
<ValidationRule>
    <fullName>ApellidosAgenteReclamaciones</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISCHANGED (Apellidos__c), $Profile.Id=&apos;00e09000000G6f0AAC&apos;)</errorConditionFormula>
    <errorMessage>No tienes permisos para cambiar el campo Apellidos</errorMessage>
</ValidationRule>