force-app/main/default/objects/Contact/validationRules/FirstNameAgente.validationRule-meta.xml
<ValidationRule>
    <fullName>FirstNameAgente</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISCHANGED (FirstName), $Profile.Id=&apos;00e09000000G6f5AAC&apos;)</errorConditionFormula>
    <errorMessage>No tienes permisos para cambiar el campo FirstName</errorMessage>
</ValidationRule>