force-app/main/default/objects/Contact/validationRules/FirstNameAgenteReclamaciones.validationRule-meta.xml
<ValidationRule>
    <fullName>FirstNameAgenteReclamaciones</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISCHANGED (FirstName), $Profile.Id=&apos;00e09000000G6f0AAC&apos;)</errorConditionFormula>
    <errorMessage>No tienes permisos para cambiar el campo FirstName</errorMessage>
</ValidationRule>