force-app/main/default/objects/Contact/validationRules/LastNameAgente.validationRule-meta.xml
<ValidationRule>
    <fullName>LastNameAgente</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISCHANGED (LastName), $Profile.Id=&apos;00e09000000G6f5AAC&apos;)</errorConditionFormula>
    <errorMessage>No tienes permisos para cambiar el campo LastName</errorMessage>
</ValidationRule>