force-app/main/default/objects/Contact/validationRules/MetodoContactoAgenteReclamaciones.validationRule-meta.xml
<ValidationRule>
    <fullName>MetodoContactoAgenteReclamaciones</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISCHANGED (Metodo_contacto__c), $Profile.Id=&apos;00e09000000G6f0AAC&apos;)</errorConditionFormula>
    <errorMessage>No tienes permisos para cambiar el campo Método de contacto</errorMessage>
</ValidationRule>