force-app/main/default/objects/Contact/validationRules/NIFAgente.validationRule-meta.xml
<ValidationRule>
    <fullName>NIFAgente</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISCHANGED (NIF__c), $Profile.Id=&apos;00e09000000G6f5AAC&apos;)</errorConditionFormula>
    <errorMessage>No tienes permisos para cambiar el campo NIF</errorMessage>
</ValidationRule>