force-app/main/default/objects/Contact/validationRules/NombreAgente.validationRule-meta.xml
<ValidationRule>
    <fullName>NombreAgente</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISCHANGED (Nombre__c), $Profile.Id=&apos;00e09000000G6f5AAC&apos;)</errorConditionFormula>
    <errorMessage>No tienes permisos para cambiar el campo Nombre</errorMessage>
</ValidationRule>