force-app/main/default/objects/Contact/validationRules/RolAgente.validationRule-meta.xml
<ValidationRule>
    <fullName>RolAgente</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISCHANGED (Rol__c), $Profile.Id=&apos;00e09000000G6f5AAC&apos;)</errorConditionFormula>
    <errorMessage>No tienes permisos para cambiar el campo Rol</errorMessage>
</ValidationRule>