force-app/main/default/objects/Contact/validationRules/RolAgenteReclamaciones.validationRule-meta.xml
<ValidationRule>
    <fullName>RolAgenteReclamaciones</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISCHANGED (Rol__c), $Profile.Id=&apos;00e09000000G6f0AAC&apos;)</errorConditionFormula>
    <errorMessage>No tienes permisos para cambiar el campo Rol</errorMessage>
</ValidationRule>