force-app/main/default/objects/Contact/listViews/AllContacts.listView-meta.xml
<ListView>
    <fullName>AllContacts</fullName>
    <columns>NIF__c</columns>
    <columns>Nombre__c</columns>
    <columns>Apellidos__c</columns>
    <columns>Metodo_contacto__c</columns>
    <columns>Telefono__c</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Direccion__c</columns>
    <columns>Rol__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Todos los contactos</label>
</ListView>